# Agent-Spec-Forge

./: .gitignore  README.md
departments/: under_contruction.md
openai-agents-sdk/cybersecurity/application-product-devsecops-security/: README.md  pyproject.toml
openai-agents-sdk/cybersecurity/application-product-devsecops-security/docs/: ROLES.md  SKILLS.md
openai-agents-sdk/cybersecurity/application-product-devsecops-security/reference/: NATIVE_SOURCES.md
openai-agents-sdk/cybersecurity/application-product-devsecops-security/src/cybersecurity_application_product_devsecops_security_agents/: __init__.py  app.py  config.py  context.py  outputs.py  registry.py
openai-agents-sdk/cybersecurity/application-product-devsecops-security/src/cybersecurity_application_product_devsecops_security_agents/agents/: __init__.py  coordinator.py  definitions.py  specialists.py
openai-agents-sdk/cybersecurity/application-product-devsecops-security/src/cybersecurity_application_product_devsecops_security_agents/guardrails/: __init__.py  input.py
openai-agents-sdk/cybersecurity/cyber-resilience-specialized-technologies/: README.md  pyproject.toml
openai-agents-sdk/cybersecurity/cyber-resilience-specialized-technologies/docs/: ROLES.md
openai-agents-sdk/cybersecurity/cyber-resilience-specialized-technologies/src/cybersecurity_cyber_resilience_specialized_technologies_agents/: __init__.py  agents.py  config.py  guardrails.py  outputs.py  registry.py
openai-agents-sdk/cybersecurity/defensive-security-operations-detection-intelligence/: pyproject.toml
openai-agents-sdk/cybersecurity/defensive-security-operations-detection-intelligence/src/cybersecurity_defensive_security_operations_detection_intelligence_agents/: registry.py
openai-agents-sdk/cybersecurity/governance-risk-compliance-assurance/: README.md  pyproject.toml
openai-agents-sdk/cybersecurity/governance-risk-compliance-assurance/docs/: ROLES.md  SKILLS.md
openai-agents-sdk/cybersecurity/governance-risk-compliance-assurance/reference/: NATIVE_SOURCES.md
openai-agents-sdk/cybersecurity/governance-risk-compliance-assurance/src/cybersecurity_governance_risk_compliance_assurance_agents/: registry.py
openai-agents-sdk/cybersecurity/governance-risk-compliance-assurance/src/cybersecurity_grc_agents/: __init__.py  app.py  config.py  context.py  outputs.py
openai-agents-sdk/cybersecurity/offensive-security-authorized-validation/: README.md  pyproject.toml
openai-agents-sdk/cybersecurity/offensive-security-authorized-validation/docs/: ROLES.md
openai-agents-sdk/cybersecurity/offensive-security-authorized-validation/reference/: NATIVE_SOURCES.md
openai-agents-sdk/cybersecurity/offensive-security-authorized-validation/src/cybersecurity_offensive_security_authorized_validation_agents/: __init__.py  agents.py  config.py  guardrails.py  outputs.py  registry.py
openai-agents-sdk/cybersecurity/security-architecture-engineering/: README.md  pyproject.toml
openai-agents-sdk/cybersecurity/security-architecture-engineering/docs/: ROLES.md  SKILLS.md
openai-agents-sdk/cybersecurity/security-architecture-engineering/reference/: NATIVE_SOURCES.md
openai-agents-sdk/cybersecurity/security-architecture-engineering/src/cybersecurity_security_architecture_agents/: __init__.py  app.py  config.py  context.py  outputs.py
openai-agents-sdk/cybersecurity/security-architecture-engineering/src/cybersecurity_security_architecture_engineering_agents/: registry.py
openai-agents-sdk/data-ai/: README.md  pyproject.toml
openai-agents-sdk/data-ai/src/data_ai_agents_sdk/: __init__.py  agents.py  guardrails.py  models.py  policies.py  serialization.py  tools.py  tracing.py  workflows.py
openai-agents-sdk/data-ai/tests/: test_agents.py  test_policies_and_tools.py  test_professional_coverage.py  test_serialization_and_workflows.py
openai-agents-sdk/devops-cloud/: README.md  pyproject.toml
openai-agents-sdk/devops-cloud/src/devops_cloud_department/: __init__.py  agents.py  assurance_review.py  devsecops.py  finops_sustainability.py  models.py  performance_capacity_efficiency.py  resilience_disaster_recovery.py  skills.py  workflows.py
openai-agents-sdk/devops-cloud/tests/: test_static_contracts.py
openai-agents-sdk/marketing/marketing-engineering/: INSTALLATION.md  README.md  USAGE.md  pyproject.toml
openai-agents-sdk/marketing/marketing-engineering/docs/: ROLES.md  SKILLS.md
openai-agents-sdk/marketing/marketing-engineering/src/marketing_engineering_agents/: agents.py  guardrails.py  models.py  orchestration.py
openai-agents-sdk/marketing/marketing-engineering/templates/: INDEPENDENT_REVIEW.md
openai-agents-sdk/marketing/marketing-engineering/tests/: test_contracts.py
openai-agents-sdk/marketing/marketing-professional/: INSTALLATION.md  README.md  USAGE.md  pyproject.toml
openai-agents-sdk/marketing/marketing-professional/docs/: ROLES.md  SKILLS.md
openai-agents-sdk/marketing/marketing-professional/reference/: NATIVE_SOURCES.md
openai-agents-sdk/marketing/marketing-professional/src/marketing_professional_agents/: __init__.py  agents.py  context.py  models.py  orchestration.py
openai-agents-sdk/marketing/marketing-professional/tests/: test_contracts.py
openai-agents-sdk/marketing/marketing-professional/workflows/: campaign-performance-analysis.md  marketing-compliance-review.md
openai-agents-sdk/software-development/: README.md  pyproject.toml
openai-agents-sdk/software-development/src/software_development_department/: __init__.py  agents.py  guardrails.py  models.py  orchestrator.py  policies.py  skills.py  tools.py  workflows.py
openai-agents-sdk/software-development/tests/: test_agents_static.py  test_models.py  test_policies.py  test_sdk_runtime.py
openai-agents-sdk/web-development/: .gitignore  README.md  pyproject.toml
openai-agents-sdk/web-development/src/web_development_department/: __init__.py  department.py  guardrails.py  instructions.py  models.py  policy.py  serialization.py  tools.py  workflow.py
openai-agents-sdk/web-development/tests/: test_department.py  test_policy.py
(+3890 files in other folders)
