[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-specialized-departments-data-ai"
version = "0.1.0"
description = "Data and AI specialization built with the OpenAI Agents SDK"
requires-python = ">=3.11"
dependencies = ["openai-agents"]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
