[project]
name = "devops-cloud-department"
version = "0.1.0"
description = "Static OpenAI Agents SDK package for the DevOps and Cloud specialization."
requires-python = ">=3.11"
dependencies = ["openai-agents"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
