[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-specialized-departments-software-development"
version = "0.1.0"
description = "Inert reference implementation of a Software Development department using the OpenAI Agents SDK"
requires-python = ">=3.11"
dependencies = ["openai-agents"]

[tool.setuptools.packages.find]
where = ["src"]
