[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-specialized-departments-software-development"
version = "0.1.0"
description = "Inert reference implementation of a Software Development department using the OpenAI Agents SDK"
requires-python = ">=3.10"
dependencies = ["openai-agents>=0.18.3,<0.19"]

[tool.setuptools.packages.find]
where = ["src"]
