[project]
name = "cybersecurity-cyber-resilience-specialized-technologies-agents"
version = "0.1.0"
description = "Static OpenAI Agents SDK wiring for Cyber Resilience and Specialized Technologies."
requires-python = ">=3.11"
dependencies = ["openai-agents>=0.18.3,<0.19", "pydantic>=2.13,<3"]

[tool.setuptools.packages.find]
where = ["src"]
