[project]
name = "cybersecurity-defensive-security-operations-detection-intelligence-agents"
version = "0.1.0"
description = "Static OpenAI Agents SDK wiring for Defensive Security Operations, Detection, and Intelligence."
requires-python = ">=3.11"
dependencies = ["openai-agents>=0.18.3,<0.19", "pydantic>=2.13,<3"]

[tool.setuptools.packages.find]
where = ["src"]
