[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "cybersecurity-grc-agents"
version = "0.1.0"
description = "OpenAI Agents SDK specialization for cybersecurity governance, risk, compliance, and assurance workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "openai-agents==0.18.2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cybersecurity_grc_agents"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
