[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketing-engineering-agents"
version = "0.1.0"
description = "Native OpenAI Agents SDK package for Engineering."
requires-python = ">=3.11"
dependencies = [
  "openai-agents>=0.2.0",
  "pydantic>=2.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/marketing_engineering_agents"]
